--- a/iris-species.ipynb
+++ b/iris-species.ipynb
@@ -2,13 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2024-01-20T15:05:01.298385485Z",
+     "start_time": "2024-01-20T15:05:01.280942779Z"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "decision tree classifier for iris species\n",
+      "then we write an example with numbers and summon the decision tree classifier again\n",
+      "we return the list of integers we got from the input of the user\n",
+      "this is the data import with the dataset\n",
+      "this is the model fit with the dataset\n",
+      "this is the predictions made with the model\n",
+      "[[5.4, 3.7, 1.5, 0.2]]\n",
+      "[[0, 1.0]]\n",
+      "Finished!\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn import datasets, tree\n",
     "import numpy as np\n",
@@ -68,14 +87,16 @@
     "    return result_list\n",
     "\n",
     "# let us then pass a set of values to determine a prediction\n",
-    "print('then we write an example with numbers and summon the decision tree classifier')\n",
-    "irises = [\"5.4,3; 7,1.5,0.2\"]\n",
+    "print('then we write an example with numbers and summon the decision tree classifier again')\n",
+    "irises = [\"5.4, 3.7, 1.5, 0.2\"]\n",
     "iris_inputs = convert_to_int_list(irises)\n",
     "\n",
     "iris_predictions = []\n",
     "for iris in iris_inputs:\n",
     "   class_pred, class_probas = make_iris_predictions(np.array([iris]))\n",
     "   iris_predictions.append([class_pred[0], class_probas[0][class_pred[0]]])\n",
+    "   print(iris_inputs)\n",
+    "   print(iris_predictions)\n",
     "   print('Finished!')\n"
    ]
   },
@@ -85,17 +106,20 @@
    "source": [],
    "metadata": {
     "collapsed": false,
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2024-01-15T17:16:57.010700871Z",
+     "start_time": "2024-01-15T17:16:57.002647085Z"
+    }
    },
    "id": "d5c98a1ae6eaeeea",
-   "execution_count": null
+   "execution_count": 8
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "name": "python3",
    "language": "python",
-   "name": "python3"
+   "display_name": "Python 3 (ipykernel)"
   },
   "language_info": {
    "codemirror_mode": {
